samples/_failures_safe/1761502405_7c6016_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_687ef6c6.c: In function ‘main’:
./samples/SAFE/__tmp_687ef6c6.c:144:9: error: expected declaration or statement at end of input
  144 |         printf("Invalid input for second matrix\n");
      |         ^~~~~~
./samples/SAFE/__tmp_687ef6c6.c:144:9: error: expected declaration or statement at end of input
